examples/test/testpolicy8451.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8451
  namespace: namespace18
spec:
  podSelector:
    matchLabels:
      key7: value29
      key3: value27
      key47: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value10
          key26: value48
      podSelector:
        matchLabels:
          key17: value41
          key32: value10
          key13: value26
